--- a/www/style/style.css
+++ b/www/style/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;700;900&display=swap');
 
 body {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, label {
-    font-weight: 900;
+    font-weight: 700;
     color: #29c1aa;
 }
 
