--- a/www/style/style.css
+++ b/www/style/style.css
@@ -1,21 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap');
 
 body {
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
 }
 
 h1, h2, h3, h4, h5, h6, label {
     font-weight: 700;
-    color: #29c1aa;
+    color: #128C7E;
 }
 
-.navbar, .navbar-default, .navbar-brand {
-    background-color: #1ebea5;
+.container-fluid {
+    height: 70px;
+}
+
+nav {
+    padding-top: 10px;
+}
+
+.navbar-default,
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>li>a,
+.navbar-default .navbar-nav>.active>a {
+    background-color: #128C7E;
     color: #fff;
 }
 
-.navbar-brand {
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:hover {
+    background-color: #128C7E;
+    color: #f5f5f5;
+}
+
+.navbar-default .navbar-brand {
     color: white;
     font-weight: 900;
-    font-size: 30px;
+    font-size: 24px;
+}
+
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:hover {
+    font-weight: 300;
+}
+
+#downloadData, #timetable, #timetable_agg {
+    margin-top: 30px;
 }
